--- a/dashboard/templates/dashboard_students.html
+++ b/dashboard/templates/dashboard_students.html
@@ -163,7 +163,7 @@
           <div
             class="grid px-4 py-3 text-xs font-semibold tracking-wide text-gray-500 uppercase border-t dark:border-gray-700 bg-gray-50 sm:grid-cols-9 dark:text-gray-400 dark:bg-gray-800">
             <span class="flex items-center col-span-3">
-              Showing 21-30 of 100
+              Mostrando 21-30 of 100
             </span>
             <span class="col-span-2"></span>
             <!-- Pagination -->
@@ -256,8 +256,8 @@
       <div class="max-w-sm w-full h-fit shadow-xs">
         <div class="md:p-8 p-5 dark:bg-gray-800 bg-white rounded-t-lg">
           <div class="px-4 flex items-center justify-between">
-            <span tabindex="0" class="focus:outline-none  text-base font-bold dark:text-gray-100 text-gray-800">October
-              2020</span>
+            <span tabindex="0" class="focus:outline-none  text-base font-bold dark:text-gray-100 text-gray-800">Octubre
+              2024</span>
             <div class="flex items-center">
               <button aria-label="calendar backward"
                 class="focus:text-gray-400 hover:text-gray-400 text-gray-800 dark:text-gray-100">
@@ -277,7 +277,7 @@
                   <polyline points="9 6 15 12 9 18" />
                 </svg>
               </button>
-
+  
             </div>
           </div>
           <div class="flex items-center justify-between pt-12 overflow-x-auto">
@@ -286,27 +286,27 @@
                 <tr>
                   <th>
                     <div class="w-full flex justify-center">
-                      <p class="text-base font-medium text-center text-gray-800 dark:text-gray-100">Mo</p>
+                      <p class="text-base font-medium text-center text-gray-800 dark:text-gray-100">Lu</p>
                     </div>
                   </th>
                   <th>
                     <div class="w-full flex justify-center">
-                      <p class="text-base font-medium text-center text-gray-800 dark:text-gray-100">Tu</p>
+                      <p class="text-base font-medium text-center text-gray-800 dark:text-gray-100">Ma</p>
                     </div>
                   </th>
                   <th>
                     <div class="w-full flex justify-center">
-                      <p class="text-base font-medium text-center text-gray-800 dark:text-gray-100">We</p>
+                      <p class="text-base font-medium text-center text-gray-800 dark:text-gray-100">Mi</p>
                     </div>
                   </th>
                   <th>
                     <div class="w-full flex justify-center">
-                      <p class="text-base font-medium text-center text-gray-800 dark:text-gray-100">Th</p>
+                      <p class="text-base font-medium text-center text-gray-800 dark:text-gray-100">Ju</p>
                     </div>
                   </th>
                   <th>
                     <div class="w-full flex justify-center">
-                      <p class="text-base font-medium text-center text-gray-800 dark:text-gray-100">Fr</p>
+                      <p class="text-base font-medium text-center text-gray-800 dark:text-gray-100">Vi</p>
                     </div>
                   </th>
                   <th>
@@ -316,7 +316,7 @@
                   </th>
                   <th>
                     <div class="w-full flex justify-center">
-                      <p class="text-base font-medium text-center text-gray-800 dark:text-gray-100">Su</p>
+                      <p class="text-base font-medium text-center text-gray-800 dark:text-gray-100">Do</p>
                     </div>
                   </th>
                 </tr>
@@ -503,24 +503,19 @@
             <div class="border-b pb-4 border-gray-400 border-dashed">
               <p class="text-xs font-light leading-3 text-gray-500 dark:text-gray-300">9:00 AM</p>
               <a tabindex="0"
-                class="focus:outline-none text-lg font-medium leading-5 text-gray-800 dark:text-gray-100 mt-2">Zoom call
-                with design team</a>
-              <p class="text-sm pt-2 leading-4 text-gray-600 dark:text-gray-300">Discussion on UX sprint
-                and Wireframe review</p>
+                class="focus:outline-none text-lg font-medium leading-5 text-gray-800 dark:text-gray-100 mt-2">Evento de oratoria</a>
+              <p class="text-sm pt-2 leading-4 text-gray-600 dark:text-gray-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, harum.</p>
             </div>
             <div class="border-b pb-4 border-gray-400 border-dashed pt-5">
               <p class="text-xs font-light leading-3 text-gray-500 dark:text-gray-300">10:00 AM</p>
               <a tabindex="0"
-                class="focus:outline-none text-lg font-medium leading-5 text-gray-800 dark:text-gray-100 mt-2">Orientation
-                session with new hires</a>
+                class="focus:outline-none text-lg font-medium leading-5 text-gray-800 dark:text-gray-100 mt-2">Evento deportivo - Semifinales masculinas de fútbol</a>
             </div>
             <div class="border-b pb-4 border-gray-400 border-dashed pt-5">
               <p class="text-xs font-light leading-3 text-gray-500 dark:text-gray-300">9:00 AM</p>
               <a tabindex="0"
-                class="focus:outline-none text-lg font-medium leading-5 text-gray-800 dark:text-gray-100 mt-2">Zoom call
-                with design team</a>
-              <p class="text-sm pt-2 leading-4 text-gray-600 dark:text-gray-300">Discussion on UX sprint
-                and Wireframe review</p>
+                class="focus:outline-none text-lg font-medium leading-5 text-gray-800 dark:text-gray-100 mt-2">Evento general - Día del niño</a>
+              <p class="text-sm pt-2 leading-4 text-gray-600 dark:text-gray-300">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, vero.</p>
             </div>
           </div>
         </div>
