--- a/dashboard/templates/students.html
+++ b/dashboard/templates/students.html
@@ -8,7 +8,7 @@
       Estudiantes
     </h2>
     <!-- CTA -->
-    <a class="flex items-center justify-between p-4 mb-8 text-sm font-semibold text-purple-100 bg-purple-600 rounded-lg shadow-md focus:outline-none focus:shadow-outline-purple"
+    <!-- <a class="flex items-center justify-between p-4 mb-8 text-sm font-semibold text-purple-100 bg-purple-600 rounded-lg shadow-md focus:outline-none focus:shadow-outline-purple"
       href="https://github.com/estevanmaito/windmill-dashboard">
       <div class="flex items-center">
         <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20">
@@ -19,7 +19,7 @@
         <span>Star this project on GitHub</span>
       </div>
       <span>View more &RightArrow;</span>
-    </a>
+    </a> -->
 
     <!-- General elements -->
     <h4 class="mb-4 text-lg font-semibold text-gray-600 dark:text-gray-300">
