--- a/dashboard/templates/dashboard_admins.html
+++ b/dashboard/templates/dashboard_admins.html
@@ -7,7 +7,7 @@
     <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">
       Panel de Administración
     </h2>
-    <!-- <form method="POST">
+    <form method="POST">
 
       {% csrf_token %}
       
@@ -15,7 +15,7 @@
           class="px-4 py-2 mb-8 text-sm font-medium leading-5 text-gray-400 transition-colors duration-150 border border-gray-600 rounded-lg active:bg-purple-600 hover:text-white hover:bg-purple-700 hover:border-purple-600 focus:outline-none focus:shadow-outline-purple">
           Datos por defecto
       </button>
-    </form> -->
+    </form>
 
     <!-- CTA -->
     <!-- <a class="flex items-center justify-between p-4 mb-8 text-sm font-semibold text-purple-100 bg-purple-600 rounded-lg shadow-md focus:outline-none focus:shadow-outline-purple"
