--- a/dashboard/templates/teachers.html
+++ b/dashboard/templates/teachers.html
@@ -35,6 +35,7 @@
       {% csrf_token %}
 
       <section class="p-4 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+
         <section class="w-full flex justify-between space-x-4">
           <label class="w-full block text-sm">
             <span class="text-gray-700 dark:text-gray-400">Nombre/s</span>
@@ -63,16 +64,123 @@
               class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
               placeholder="0123-1234567" />
           </label>
-
         </section>
 
-        <section class="w-full flex justify-between gap-4 mt-4">
+        <section
+          class="w-full flex justify-between flex-wrap min-[425px]:flex-nowrap space-x-0 space-y-4 min-[425px]:space-x-4 min-[425px]:space-y-0 mt-4">
+          <label class="block w-full text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Cédula</span>
+            <div class="flex gap-2">
+              <select name="idtype"
+                class="block w-[88px] mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input">
+                <option value="0">...</option>
+                <option value="V">V</option>
+                <option value="E">E</option>
+                <option value="P">P</option>
+              </select>
+              <input name="idcard" type="tel"
+                class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+                placeholder="12345678" />
+            </div>
+          </label>
+          <label class="block w-[46.5%] min-[425px]:w-full text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Sexo</span>
+            <select name="gender"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input">
+              <option value="0">...</option>
+              <option value="Masculino">Masculino</option>
+              <option value="Femenino">Femenino</option>
+              <option value="Otro">Otro</option>
+            </select>
+          </label>
+        </section>
+
+        <section
+          class="w-full flex justify-between flex-wrap min-[425px]:flex-nowrap space-x-0 space-y-4 min-[425px]:space-x-4 min-[425px]:space-y-0 mt-4">
+          <label class="block text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Fecha de nacimiento</span>
+            <input name="birthdate" type="date" maxlength="250"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input" />
+          </label>
+          <label class="block w-[46.5%] min-[425px]:w-full text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Pais</span>
+            <select name="country"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input">
+              <option value="0">...</option>
+              <option value="Venezuela">Venezuela</option>
+              <option value="Perú">Perú</option>
+              <option value="Chile">Chile</option>
+            </select>
+          </label>
+          <label class="block w-[46.5%] min-[425px]:w-full text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Estado</span>
+            <select name="state"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input">
+              <option value="0">...</option>
+              <option value="Amazonas">Amazonas</option>
+              <option value="Mérida">Mérida</option>
+              <option value="Nueva Esparta">Nueva Esparta</option>
+            </select>
+          </label>
+        </section>
+
+        <section
+          class="w-full h-min flex justify-between content-center flex-wrap min-[425px]:flex-nowrap space-x-0 space-y-4 min-[425px]:space-x-4 min-[425px]:space-y-0 mt-4">
+          <label class="block w-[46.5%] min-[425px]:w-full text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Ciudad</span>
+            <select name="city"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input">
+              <option value="0">...</option>
+              <option value="La Esmeralda">La Esmeralda</option>
+              <option value="El Vigía">El Vigía</option>
+              <option value="La Asunción">La Asunción</option>
+            </select>
+          </label>
+          <label class="block w-[46.5%] min-[425px]:w-full text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Municipio</span>
+            <select name="municipality"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input">
+              <option value="0">...</option>
+              <option value="Alto Orinoco">Alto Orinoco</option>
+              <option value="Alberto Adriani">Alberto Adriani</option>
+              <option value="Arismendi">Arismendi</option>
+            </select>
+          </label>
+        </section>
+
+        <section
+          class="w-full h-min flex justify-between content-center flex-wrap min-[425px]:flex-nowrap space-x-0 space-y-4 min-[425px]:space-x-4 min-[425px]:space-y-0 mt-4">
+          <label class="w-full block text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Dirección de habitación</span>
+            <input name="address" type="text" maxlength="250"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              placeholder="Carretera Ríos, 68, Piso 30" />
+          </label>
+        </section>
+
+        <hr class="mt-8 mb-4 border border-gray-700" />
+
+        <section class="w-full flex space-x-4">
+          <!-- <button type="submit"
+            class="px-4 py-2 text-sm font-medium leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple">
+            Crear
+          </button> -->
+          <button
+            class="px-4 py-2 text-sm font-medium leading-5 text-gray-400 transition-colors duration-150 border border-gray-600 rounded-lg active:bg-purple-600 hover:text-white hover:bg-purple-700 hover:border-purple-600 focus:outline-none focus:shadow-outline-purple">
+            Limpiar
+          </button>
+        </section>
+      </section>
+
+      <section class="p-4 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+
+        <section class="w-full flex justify-between gap-4">
 
           <section class="w-full">
             <select x-cloak id="selectCourses" style="display:none" class="text-gray-400">
-              <option value="1">Preescolar</option>
-              <option value="4">Educ. Básica</option>
-              <option value="10">Educ. Media</option>
+              <option value="Educ. Inicial">Educ. Inicial</option>
+              <option value="Educ. Básica">Educ. Básica</option>
+              <option value="Educ. Media">Educ. Media</option>
             </select>
 
             <label class="w-full text-sm">
@@ -254,7 +362,7 @@
             </select>
 
             <label class="w-full text-sm">
-              <span class="text-gray-700 dark:text-gray-400">Materia/s</span>
+              <span class="text-gray-700 dark:text-gray-400 leading-none">Materia/s</span>
               <div x-data="dropdown()" x-init="loadOptionsSubjects()"
                 class="h-fit w-full flex flex-col items-center mx-auto">
                 <input name="valueSubjects" type="hidden" x-bind:value="selectedValues()">
@@ -337,12 +445,43 @@
 
         </section>
 
-        <label class="w-full mt-4 block text-sm">
-          <span class="text-gray-700 dark:text-gray-400">Dirección</span>
-          <input name="address" type="text" maxlength="250"
-            class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-            placeholder="Carretera Ríos, 68, Piso 30" />
-        </label>
+        <section
+          class="w-full flex justify-between flex-wrap min-[425px]:flex-nowrap space-x-0 space-y-4 min-[425px]:space-x-4 min-[425px]:space-y-0 mt-4">
+          
+          <div class="w-full text-sm mt-4">
+            <span class="text-gray-700 dark:text-gray-400">¿Desea enviar datos por correo?</span>
+            <div class="mt-2 flex gap-4">
+              <label class="inline-flex items-center text-gray-600 dark:text-gray-400">
+                <input
+                  type="radio"
+                  class="text-purple-600 form-radio focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray"
+                  name="send_data"
+                  value="personal"/>
+                <span class="ml-2">Sí</span>
+              </label>
+              <label class="inline-flex items-center text-gray-600 dark:text-gray-400">
+                <input
+                  type="radio"
+                  class="text-purple-600 form-radio focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray"
+                  name="send_data"
+                  value="busines"/>
+                <span class="ml-2">No</span>
+              </label>
+            </div>
+          </div>
+
+          <label class="block w-[46.5%] min-[425px]:w-full text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Estatus</span>
+            <select name="status"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input">
+              <option value="0">...</option>
+              <option value="Activo">Activo</option>
+              <option value="Bloqueado">Bloqueado</option>
+              <option value="Retirado">Retirado</option>
+            </select>
+          </label>
+
+        </section>
 
         <hr class="mt-8 mb-4 border border-gray-700" />
 
@@ -408,12 +547,10 @@
                 {% endfor %}
               </td>
               <td class="px-4 py-3 text-xs space-y-2">
-                {% for course in user.teachers.course_id.all %}
                 <p
                   class="w-fit px-2 py-1 font-semibold leading-tight text-green-700 bg-green-100 rounded-lg lg:rounded-full dark:bg-green-700 dark:text-green-100">
-                  {{ course.name_type }}
+                  {{user.teachers.course_type}}
                 </p>
-                {% endfor %}
               </td>
               <td class="px-4 py-3">
                 <div class="flex items-center space-x-4 text-sm">
