--- a/billing/templates/dashboard_bills.html
+++ b/billing/templates/dashboard_bills.html
@@ -23,7 +23,7 @@
     </a> -->
 
     <!-- Cards -->
-    <div class="grid gap-6 mb-8 md:grid-cols-2 xl:grid-cols-4">
+    <div class="grid gap-6 md:grid-cols-2 xl:grid-cols-4">
       <!-- Card -->
       <div class="flex items-center p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
         <div class="p-3 mr-4 text-orange-500 bg-orange-100 rounded-full dark:text-orange-100 dark:bg-orange-500">
@@ -99,18 +99,11 @@
     </div>
 
     <!-- New Table -->
-    <div class="w-full overflow-hidden rounded-lg shadow-xs">
+    <span class="mt-8 w-full px-4 py-3 text-xs font-bold tracking-wide text-left text-gray-500 uppercase border-b rounded-t-lg dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">Estudiantes morosos</span>
+    <div class="w-full overflow-hidden rounded-lg shadow-xs rounded-t-none">
       <div class="w-full overflow-x-auto">
         <table class="w-full whitespace-no-wrap">
           <thead>
-            <tr
-              class="text-normal font-semibold tracking-wide text-left text-gray-500 border-b dark:border-gray-700 bg-gray-50 dark:text-gray-300 dark:bg-gray-800">
-              <th class="px-4 py-3">Estudiantes morosos</th>
-              <th class="px-4 py-3"></th>
-              <th class="px-4 py-3"></th>
-              <th class="px-4 py-3"></th>
-              <th class="px-4 py-3"></th>
-            </tr>
             <tr
               class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
               <th class="px-4 py-3">Nombre</th>
