--- a/dashboard/templates/schedules.html
+++ b/dashboard/templates/schedules.html
@@ -32,7 +32,7 @@
 
       <section class="p-4 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
 
-        <section class="w-full flex justify-between space-x-4">
+        <section class="w-full flex justify-between gap-4 flex-wrap min-[425px]:flex-nowrap">
           <label class="w-full block text-sm">
             <span class="text-gray-700 dark:text-gray-400">Dia</span>
             <input name="day" type="text" maxlength="250"
@@ -53,7 +53,7 @@
           </label>
         </section>
 
-        <section class="w-full flex justify-between space-x-4 mt-4">
+        <section class="w-full flex justify-between gap-4 mt-4">
           <label class="block w-[46.5%] min-[425px]:w-full text-sm">
             <span class="text-gray-700 dark:text-gray-400">Materia</span>
             <select name="subject"
@@ -76,7 +76,7 @@
           </label>
         </section>
 
-        <section class="w-full flex justify-between space-x-4 mt-4">
+        <section class="w-full flex justify-between gap-4 mt-4">
           <label class="block w-[46.5%] min-[425px]:w-full text-sm">
             <span class="text-gray-700 dark:text-gray-400">Curso</span>
             <select name="course"
@@ -101,7 +101,7 @@
 
         <hr class="mt-8 mb-4 border border-gray-700" />
 
-        <section class="w-full flex space-x-4">
+        <section class="w-full flex gap-4">
           <button type="submit"
             class="px-4 py-2 text-sm font-medium leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple">
             Crear
