--- a/dashboard/templates/teachers.html
+++ b/dashboard/templates/teachers.html
@@ -67,10 +67,10 @@
         </section>
 
         <section
-          class="w-full flex justify-between flex-wrap min-[425px]:flex-nowrap space-x-0 space-y-4 min-[425px]:space-x-4 min-[425px]:space-y-0 mt-4">
+          class="w-full flex justify-between gap-4 min-[425px]:gap-2 flex-wrap min-[425px]:flex-nowrap mt-4">
           <label class="block w-full text-sm">
             <span class="text-gray-700 dark:text-gray-400">Cédula</span>
-            <div class="flex gap-2">
+            <div class="flex gap-4">
               <select name="idtype"
                 class="block w-[88px] mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input">
                 <option value="0">...</option>
@@ -83,7 +83,7 @@
                 placeholder="12345678" />
             </div>
           </label>
-          <label class="block w-[46.5%] min-[425px]:w-full text-sm">
+          <label class="block w-full min-[425px]:w-[46.5%] text-sm">
             <span class="text-gray-700 dark:text-gray-400">Sexo</span>
             <select name="gender"
               class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input">
@@ -96,7 +96,7 @@
         </section>
 
         <section
-          class="w-full flex justify-between flex-wrap min-[425px]:flex-nowrap space-x-0 space-y-4 min-[425px]:space-x-4 min-[425px]:space-y-0 mt-4">
+          class="w-full flex justify-between gap-4 flex-wrap min-[425px]:flex-nowrap mt-4">
           <label class="block text-sm">
             <span class="text-gray-700 dark:text-gray-400">Fecha de nacimiento</span>
             <input name="birthdate" type="date" maxlength="250"
@@ -125,7 +125,7 @@
         </section>
 
         <section
-          class="w-full h-min flex justify-between content-center flex-wrap min-[425px]:flex-nowrap space-x-0 space-y-4 min-[425px]:space-x-4 min-[425px]:space-y-0 mt-4">
+          class="w-full h-min flex justify-between content-center gap-4 flex-wrap min-[425px]:flex-nowrap mt-4">
           <label class="block w-[46.5%] min-[425px]:w-full text-sm">
             <span class="text-gray-700 dark:text-gray-400">Ciudad</span>
             <select name="city"
@@ -174,7 +174,7 @@
 
       <section class="p-4 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
 
-        <section class="w-full flex justify-between gap-4">
+        <section class="w-full flex flex-wrap justify-between gap-4 min-[425px]:flex-nowrap">
 
           <section class="w-full">
             <select x-cloak id="selectCourses" style="display:none" class="text-gray-400">
@@ -446,9 +446,9 @@
         </section>
 
         <section
-          class="w-full flex justify-between flex-wrap min-[425px]:flex-nowrap space-x-0 space-y-4 min-[425px]:space-x-4 min-[425px]:space-y-0 mt-4">
+          class="w-full flex justify-between gap-4 flex-wrap min-[425px]:flex-nowrap mt-4">
           
-          <div class="w-full text-sm mt-4">
+          <div class="order-last w-full text-sm min-[425px]:order-first">
             <span class="text-gray-700 dark:text-gray-400">¿Desea enviar datos por correo?</span>
             <div class="mt-2 flex gap-4">
               <label class="inline-flex items-center text-gray-600 dark:text-gray-400">
@@ -470,7 +470,7 @@
             </div>
           </div>
 
-          <label class="block w-[46.5%] min-[425px]:w-full text-sm">
+          <label class="block w-full min-[425px]:w-[46.5%] text-sm">
             <span class="text-gray-700 dark:text-gray-400">Estatus</span>
             <select name="status"
               class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input">
