--- a/billing/templates/bills.html
+++ b/billing/templates/bills.html
@@ -156,7 +156,7 @@
                 {{pay.date}}
               </td>
               <td class="px-4 py-3 text-sm">
-                {{pay.amount_usd}} $
+                {{pay.amount_usd}} $ / {{pay.amount_ves}} Bs
               </td>
               <td class="px-4 py-3 text-xs">
                 <p
